compiler/testData/diagnostics/tests/subtyping/topLevelAnonymousObjects.fir.kt
private var x = object {}

fun test() {
    x = <!ASSIGNMENT_TYPE_MISMATCH!>object<!> {}
}
